--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ include_directories(${MLIR_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_BINARY_DIR}/include)
 include_directories(${PROJECT_CURRENT_BINARY_DIR}/include)
+include_directories(include)
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
 
 add_subdirectory(lib)
 add_subdirectory(include)
